2002-03-27  Matthias Clasen  <maclas@gmx.de>

	* io-png.c (gdk_pixbuf__png_image_load,
	gdk_pixbuf__png_image_begin_load): Make libpng use g_malloc
	instead of system malloc. 

2002-03-26  Matthias Clasen  <maclas@gmx.de>

	* io-tiff.c (tiff_image_parse): Don't leak pixbuf on error.

	* io-gif.c (gdk_pixbuf__gif_image_load_increment): Don't leak
	context->buf on error.

	* gdk-pixbuf-loader.c (gdk_pixbuf_loader_close): Make sure to call
	stop_load even for short images to prevent memleaks.

2002-03-25  Matthias Clasen  <maclas@gmx.de>

	* io-png.c (setup_png_transformations): Changed signature to
	return success and set a GError parameter, adjusted all callers.
	Also work around a possible FPE in libpng and always check that
	the new info is sane.

2002-03-23  Matthias Clasen  <maclas@gmx.de>

	* io-wbmp.c (gdk_pixbuf__wbmp_image_load_increment):
	context->updated_func is NULL during a nonincremental load.
	(gdk_pixbuf__wbmp_image_load): Stop reading after the first error.

2002-03-18  Matthias Clasen  <maclas@gmx.de>

	* io-tga.c: Fix assumptions on rowstride by manually allocating a
	contiguous pixel buffer. Catch buffer overruns in RLE-modi. 
	Support grayscale + alpha (which can be written, but not read (!)
	by the Gimp). 

2002-03-15  Matthias Clasen  <maclas@gmx.de>

	* io-gif.c (gif_get_frame_info): Catch invalid frame dimensions.

2002-03-13  Matthias Clasen  <maclas@gmx.de>

	* test-images.h: Add valid_ras_test and invalid_bmp_1.

	* test-loaders.c (main): Add random tests for ras and pnm and an
	invalid bmp which was a crasher until my 2002-03-12 commit.

	* io-pnm.c (gdk_pixbuf__pnm_image_load_increment): Don't unref the
	pixbuf on errors.

	* io-ras.c: Handle some errors.

2002-03-12  Sven Neumann  <sven@gimp.org>

	* gdk-pixbuf.c (gdk_pixbuf_fill): use sequential writes instead of
	calling memcpy(). Simpler and potentially faster. (#70332)

2002-03-12  Matthias Clasen  <maclas@gmx.de>

	* io-bmp.c (DecodeHeader): Replace a g_assert_not_reached ()